# zksync-airdrop-rescue

./: Cargo.toml  README.md  airdrop_data.json  clippy.toml  rustfmt.toml  wallets.json
src/: main.rs  provider.rs  wallet.rs
src/transactions/: claim.rs  common.rs  constants.rs  mod.rs  transaction_request.rs  transfer.rs
